# CalcMCP

./: .gitignore  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUCCESS.md  LICENSE  QUICKSTART.md  README.md  README_ZH.md  advanced_math_problems.json  advanced_math_problems.py  deploy.sh  mcp_server.py  pyproject.toml  requirements.txt  setup.py  verify_production_readiness.py
src/mcp_scientific_calculator/: __init__.py  __main__.py  calculator.py  mcp_server.py
