[project]
name = "scientific-calculator-mcp"
version = "1.0.0"
description = "A comprehensive scientific calculator MCP server using SymPy, SciPy, and NumPy"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "sympy>=1.12",
    "scipy>=1.11.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
